# genesets

./: .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  book.toml  cli-reference.html  competitive-landscape.html  diffing.html  evals.html  getting-started.html  index.html  input-model.html  justfile  notebook.css  notebooks.html  ontology-prep.html  performance.html  post-processing.html  print.html  roadmap.html  searcher-c2a407aa.js  searchindex-628a2369.js  statistics.html  storage-backends.html  toc-dce20fbc.js  toc.html  tutorials.html  workflow-layer.html
benches/: enrichment.rs
curation/: README.md
evals/: README.md  go_contributes_to_impact_expression4313_nongo.yaml  go_iba_impact_expression500.yaml  go_iba_impact_expression5000_diverse.yaml  go_impact_5y_expression500.yaml  go_impact_5y_expression5000_diverse.yaml
examples/: background.txt  closure.tsv  enrich.yaml  gene_terms.tsv  human-go-enrich.yaml  human_interferon_up_genes.txt  matrix.yaml  (+3 more)
python/genesets-workflows/: README.md  pyproject.toml
python/genesets-workflows/src/genesets_workflows/: __init__.py  cli.py  runtime.py  yaml_io.py
python/genesets-workflows/src/genesets_workflows/curation/: __init__.py  aspect.py  cli.py  draft.py  enrichment.py  metrics.py  model.py  report.py  validate.py
python/genesets-workflows/src/genesets_workflows/explorer/: __init__.py  app.py  server.py
python/genesets-workflows/src/genesets_workflows/explorer/static/: app.js  index.html  styles.css
python/genesets-workflows/src/genesets_workflows/reports/: __init__.py  go_impact.py  reactome_flat.py
python/genesets-workflows/src/genesets_workflows/sources/: __init__.py  mygeneset.py  mygeneset_stratified.py  reactome_flat.py
python/genesets-workflows/tests/: test_aspect.py  test_curation_cli.py  test_curation_imports.py  test_draft.py  test_enrichment.py  test_example_valid.py  test_metrics.py  test_model.py  test_report.py  test_schema_loads.py  test_validate.py
python/genesets-workflows/tests/data/: enrich_sample.tsv
(+265 files in other folders)
