[package]
name = "genesets-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow-array = "58.3"
arrow-schema = "58.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
parquet = { version = "58.3", default-features = false, features = ["arrow", "snap"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "enrichment"
harness = false
